documentation: add documentation related to #48
Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/docs/book/migration/to-3-0.md
+++ b/docs/book/migration/to-3-0.md
@@ -4,11 +4,14 @@ Migration guide for Laminas Cache version 3.0.0.
 
 ## New Features
 
-- None.
+- Each cache adapter has its [own package](#satellite-packages).
 
 ## Breaking Changes
 
-- None.
+- Removal of support for `laminas/laminas-servicemanager` and the related files
+    - `PatternPluginManagerV2Polyfill`
+    - `PatternPluginManagerV3Polyfill`
+    - `PatternPluginManagerTrait`
 
 ## Satellite packages
 
